adicionei um paragrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -9,6 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut earum in sint et id voluptas obcaecati tempore consectetur iure itaque? Dolorum enim quae dolores quia qui cum iusto debitis atque.</p>
-    
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus, illo, odio magni dignissimos, dolores repellendus corrupti expedita eligendi illum accusantium rem a natus quo dicta labore odit cupiditate eos. Maiores!</p>
 </body>
 </html>
